--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,79 +1,79 @@
 <!doctype html>
 <html lang="en-US">
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta charset="UTF-8">
-  <title>GeoNode</title> 
-  <link rel="shortcut icon" href="/static/img/favicon.ico" />
-  <meta name='description' content='GeoNode'/>
-  <meta name='keywords' content='GeoNode'/>
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-  <link rel='stylesheet' href='/static/css/site.css' type='text/css' media='all' />
-  <!-- HTML5 shim, for IE6-8 support of HTML elements -->
-        <!--[if lt IE 9]>
-            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-            <![endif]-->
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <title>{{ page.title }}</title> 
+    <link rel="shortcut icon" href="/static/img/favicon.ico" />
+    <meta name='description' content='GeoNode'/>
+    <meta name='keywords' content='GeoNode'/>
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' href='/static/css/site.css' type='text/css' media='all' />
+    <!-- HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
 
-            <script type="text/javascript" src="/static/js/jquery.js"></script>
-            <script type="text/javascript" src="/static/js/sequence.jquery-min.js"></script>
-            <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
-          </head>
-          <body class="">
-            <header class="main">
-              <div class="container">
-                <div class="row">
-                  <div class="span2">
-                    <h1><a class="brand" href="/">GeoNode</a></h1>
-                  </div>
-                  <div class="span1">
-                    <div class="btn-group nav-coll">
-                      <button type="button" class="btn-nav-coll" data-toggle="dropdown">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                      </button>
-                      <ul class="dropdown-menu">
-                        <li><a href="/user_features.html">For Users</a></li>
-                        <li><a href="/dev_features.html">For Developers</a></li>
-                        <li><a href="/admin_features.html">For Admins</a></li>
-                        <li><a href="{{workshop_base}}">Workshops</a></li>
-                        <li><a href="/communication/">Communication</a></li>
-                        <li><a href="/faqs.html">FAQs</a></li>
-                        <li><a href="/gallery/">Sites Gallery</a></li>
-                        <li><a href="/blog/">Blog</a></li>
-                        <li><a href="http://docs.geonode.org/" target = '_blank'>Documentation</a></li>
-                        <li><a href="http://github.com/geonode/geonode/issues" target = '_blank'>Issue Tracker</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="span9">
-                    <div class="pull-right">
-                      <a href="/#install" class="btn btn-success">Install GeoNode</a>
-                      <a target="_blank" href="{{ demo_site }}" class="btn btn-warning">Try the Demo</a>
-                      <a href="/blog/" class="btn btn-success">Read our Blog</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </header>
+    <script type="text/javascript" src="/static/js/jquery.js"></script>
+    <script type="text/javascript" src="/static/js/sequence.jquery-min.js"></script>
+    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+  </head>
+  <body class="{{ page.body_class }}">
+    <header class="main">
+      <div class="container">
+        <div class="row">
+          <div class="span2">
+            <h1><a class="brand" href="/">GeoNode</a></h1>
+          </div>
+          <div class="span1">
+            <div class="btn-group nav-coll">
+              <button type="button" class="btn-nav-coll" data-toggle="dropdown">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="/user_features.html">For Users</a></li>
+                <li><a href="/dev_features.html">For Developers</a></li>
+                <li><a href="/admin_features.html">For Admins</a></li>
+                <li><a href="{{workshop_base}}">Workshops</a></li>
+                <li><a href="/communication/">Communication</a></li>
+                <li><a href="/faqs.html">FAQs</a></li>
+                <li><a href="/gallery/">Sites Gallery</a></li>
+                <li><a href="/blog/">Blog</a></li>
+                <li><a href="http://docs.geonode.org/" target = '_blank'>Documentation</a></li>
+                <li><a href="http://github.com/geonode/geonode/issues" target = '_blank'>Issue Tracker</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="span9">
+            <div class="pull-right">
+              <a href="/#install" class="btn btn-success">Install GeoNode</a>
+              <a target="_blank" href="{{ demo_site }}" class="btn btn-warning">Try the Demo</a>
+              <a href="/blog/" class="btn btn-success">Read our Blog</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
 
-            {{ content }}
+    {{ content }}
 
-            <a href="https://github.com/GeoNode/geonode/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
-            <script type="text/javascript">
+    <a href="https://github.com/GeoNode/geonode/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+    <script type="text/javascript">
 
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-38570723-1']);
-            _gaq.push(['_trackPageview']);
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-38570723-1']);
+    _gaq.push(['_trackPageview']);
 
-            (function() {
-              var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-              ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-              var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-            })();
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
 
-            </script>
-          </body>
-          </html>
+    </script>
+  </body>
+</html>
