--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,16 +9,16 @@
     <meta name='keywords' content='GeoNode'/>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-    <link rel='stylesheet' href='/static/css/site.css' type='text/css' media='all' />
+    <link rel='stylesheet' href='{{site.baseurl}}/static/css/site.css' type='text/css' media='all' />
     <!-- HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
 
-    <script type="text/javascript" src="/static/js/jquery.js"></script>
-    <script type="text/javascript" src="/static/js/sequence.jquery-min.js"></script>
-    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/static/js/jquery.js"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/static/js/sequence.jquery-min.js"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/static/js/bootstrap.min.js"></script>
   </head>
   <body class="{{ page.body_class }}">
     <header class="main">
@@ -35,14 +35,14 @@
                 <span class="icon-bar"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="/user_features.html">For Users</a></li>
-                <li><a href="/dev_features.html">For Developers</a></li>
-                <li><a href="/admin_features.html">For Admins</a></li>
+                <li><a href="{{site.baseurl}}/user_features.html">For Users</a></li>
+                <li><a href="{{site.baseurl}}/dev_features.html">For Developers</a></li>
+                <li><a href="{{site.baseurl}}/admin_features.html">For Admins</a></li>
                 <li><a href="http://docs.geonode.org/en/latest/tutorials/">Workshops</a></li>
-                <li><a href="/communication/">Communication</a></li>
-                <li><a href="/faqs.html">FAQs</a></li>
-                <li><a href="/gallery/">Sites Gallery</a></li>
-                <li><a href="/blog/">Blog</a></li>
+                <li><a href="{{site.baseurl}}/communication/">Communication</a></li>
+                <li><a href="{{site.baseurl}}/faqs.html">FAQs</a></li>
+                <li><a href="{{site.baseurl}}/gallery/">Sites Gallery</a></li>
+                <li><a href="{{site.baseurl}}/blog/">Blog</a></li>
                 <li><a href="http://docs.geonode.org/" target = '_blank'>Documentation</a></li>
                 <li><a href="http://github.com/geonode/geonode/issues" target = '_blank'>Issue Tracker</a></li>
               </ul>
@@ -52,7 +52,7 @@
             <div class="pull-right">
               <a href="/#install" class="btn btn-success">Install GeoNode</a>
               <a target="_blank" href="http://demo.geonode.org" class="btn btn-warning">Try the Demo</a>
-              <a href="/blog/" class="btn btn-success">Read our Blog</a>
+              <a href="{{site.baseurl}}/blog/" class="btn btn-success">Read our Blog</a>
             </div>
           </div>
         </div>
