--- a/_includes/important_links.html
+++ b/_includes/important_links.html
@@ -43,7 +43,7 @@
                   <p>Guides for users, developers, and administrators</p>
                 </article>
               </a>
-              <a href="/communication/#mailing-lists">
+              <a href="{{site.baseurl}}/communication/#mailing-lists">
                 <article class="mailing-list">
                   <h3>Mailing Lists</h3>
                   <p>Discussion groups for users and developers</p>
@@ -57,19 +57,19 @@
               </a>
             </div>
             <div class="span5">
-              <a href="faqs.html">
+              <a href="{{site.baseurl}}/faqs.html">
                 <article class="faqs">
                   <h3>FAQs</h3>
                   <p>Frequently Asked Questions about GeoNode</p>
                 </article>
               </a>
-              <a href="communication/#irc">
+              <a href="{{site.baseurl}}/communication/#irc">
                 <article class="irc">
                   <h3>IRC</h3>
                   <p>Real-time discussion and help at #geonode on freenode.net</p>
                 </article>
               </a>
-              <a href="/gallery/">
+              <a href="{{site.baseurl}}/gallery/">
                 <article class="sites-gallery">
                   <h3>Gallery</h3>
                   <p>A collection of live sites built using GeoNode</p>
