--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8">
     <title>{{ page.title }}</title> 
-    <link rel="shortcut icon" href="/static/img/favicon.ico" />
+    <link rel="shortcut icon" href="{{site.baseurl}}/static/img/favicon.ico" />
     <meta name='description' content='GeoNode'/>
     <meta name='keywords' content='GeoNode'/>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
@@ -25,7 +25,7 @@
       <div class="container">
         <div class="row">
           <div class="span2">
-            <h1><a class="brand" href="/">GeoNode</a></h1>
+            <h1><a class="brand" href="{{site.baseurl}}">GeoNode</a></h1>
           </div>
           <div class="span1">
             <div class="btn-group nav-coll">
