other baser fixes

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -50,7 +50,7 @@
           </div>
           <div class="span9">
             <div class="pull-right">
-              <a href="/#install" class="btn btn-success">Install GeoNode</a>
+              <a href="{{site.baseurl}}/#install" class="btn btn-success">Install GeoNode</a>
               <a target="_blank" href="http://demo.geonode.org" class="btn btn-warning">Try the Demo</a>
               <a href="{{site.baseurl}}/blog/" class="btn btn-success">Read our Blog</a>
             </div>
